...
                />
              ))}
            </SkeletonList>
          ) : (
            <>
              {emptyListMessage && filteredCourts.length === 0 ? (
                <EmptyListText testID="search-court-empty">
                  {emptyListMessage}
                </EmptyListText>
              ) : null}

              <FlatList
                data={listData}
...
