...
      visible={modalVisible}
      transparent
      animationType="slide"
      onRequestClose={resetAndClose}
    >
      <ModalContainer>
        <ModalContent testID="join-ladder-modal">
          <CloseButton onPress={resetAndClose} testID="join-ladder-close">
            <AntDesign name="close-circle" size={30} color="red" />
          </CloseButton>

          <Title>{ladder.name}</Title>
          {!!ladder.region && <Subtitle>{ladder.region}</Subtitle>}
...
