...
  const checkinControl =
    isAccepted || isCompleted
      ? { checkedIn: selfCheckedIn, onPress: handleCheckin }
      : undefined;

  return (
    <Screen testID="match-details">
      <Header>
        <TopBar>
          <IconButton
            activeOpacity={0.8}
            onPress={() =>
              navigation.navigate("MatchDetailsMenu", {
...
